Mejoras al menú de navegacion Se hicieron mejoras al menu final

--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
             <div class="row">
               <div class="col main-banner-col">
                 <img class="w-100" src="img/banner.jpg" alt="">
-                <!-- <div class="row main-banner-col__data">
+                <div class="row main-banner-col__data">
                   <div class="col">
-                      <h2 class="main-banner-col__title">Tu escuela en TIC</h2> -->
+                      <h2 class="main-banner-col__title">Escuela en TIC</h2>
                       <!-- Subtitulo banner -->
-                      <!-- <p class="main-banner-col__subtitle"> Es un sitio creado para la enseñanza de tecnologias</p> -->
+                      <p class="main-banner-col__subtitle"> Es un sitio creado para la enseñanza de tecnologias</p>
                       <!-- Descripcion -->
-                      <!-- <p class="main-banner-col__description"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam facere cumque maxime, doloremque culpa ipsum reprehenderit laborum, praesentium suscipit iure</p> -->
+                      <p class="main-banner-col__description"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam facere cumque maxime, doloremque culpa ipsum reprehenderit laborum, praesentium suscipit iure</p>
                       <!-- Botones -->
-                      <!-- <a href="" class="main-banner-col__button btn btn-primary">Proyecto</a>            
+                      <a href="" class="main-banner-col__button btn btn-primary">Proyecto</a>             -->
                       <a href="" class="main-banner-col__button btn btn-light">Interactua</a>
                   </div>
-                </div> -->
+                </div> 
               </div>
             </div>
             </div>
@@ -107,67 +107,57 @@
                         </a>
                       </div>
                     </main>
-                    <nav class="col-lg-3">
-                        <div class="accordion" id="accordionExample">
-                            <div class="card">
-                              <div class="card-header" id="headingOne">
-                                <h5 class="mb-0">
-                                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Proyectos
-                                  </button>
-                                </h5>
-                              </div>
-                          
-                              <div id="collapseOne" class="collapse" >
-                                <div class="card-body">
-                                    <nav class="nav flex-column">
-                                        <a class="nav-link active" href="#">Active</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link disabled" href="#">Disabled</a>
-                                      </nav>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="card">
-                              <div class="card-header" id="headingTwo">
-                                <h5 class="mb-0">
-                                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Videos
-                                  </button>
-                                </h5>
-                              </div>
-                              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                                <div class="card-body">
-                                    <nav class="nav flex-column">
-                                        <a class="nav-link active" href="#">Active</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link disabled" href="#">Disabled</a>
-                                      </nav>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="card">
-                              <div class="card-header" id="headingThree">
-                                <h5 class="mb-0">
-                                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Eventos
-                                  </button>
-                                </h5>
-                              </div>
-                              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                <div class="card-body">
-                                    <nav class="nav flex-column">
-                                        <a class="nav-link active" href="#">Active</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link disabled" href="#">Disabled</a>
-                                      </nav>
-                                </div>
-                              </div>
+                    <!-- Navegacion -->
+                    <nav class="col-lg-3 main-menu">
+                      <div class="accordion" id="accordionExample">
+                        <div class="card">
+                          <div class="card-header main-menu__card" id="headingOne">
+                            <h5 class="mb-0 main-menu__h5">
+                              <button class="btn btn-link main-menu__button" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Asignaturas
+                              </button>
+                            </h5>
+                          </div>
+                      
+                          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div class="card-body main-menu__cb">
+                              <nav class="nav flex-column">
+                                <a class="nav-link btn btn-light" href="#">Matematicas</a>
+                                <a class="nav-link btn btn-light" href="#">Fisica</a>
+                                <a class="nav-link btn btn-light" href="#">Estadistica</a>                                
+                              </nav>
                             </div>
                           </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-header main-menu__card" id="headingTwo">
+                            <h5 class="mb-0">
+                              <button class="btn btn-link main-menu__button collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Vídeos
+                              </button>
+                            </h5>
+                          </div>
+                          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                            <div class="card-body main-menu__cb">
+                              Anim.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-header main-menu__card" id="headingThree">
+                            <h5 class="mb-0">
+                              <button class="btn btn-link collapsed main-menu__button" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Proyectos
+                              </button>
+                            </h5>
+                          </div>
+                          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                            <div class="card-body main-menu__cb">
+                              VHS.
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </nav>
                 </div>
             </div>
