--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Frijole|Merienda+One" rel="stylesheet">
+    <link href="css/styles-font.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Escuela en TIC</title>
 </head>
@@ -23,7 +24,7 @@
                     <!-- Titulo -->
                     <!-- <h2 class="main-banner-col__title ">Escuela en TIC</h2>                     -->
                     <!-- Logo -->
-                    <!-- <img src="img/logo.png" alt="Logo pagina"> -->
+                    <!-- <img src="img/logo-new.png" alt="Logo pagina"> -->
                 </div>
               </div> 
             </div>            
@@ -178,27 +179,33 @@
                 <div class="col main-footer__container">
                     <h2 class="main-footer__title">Escuela en TIC</h2>
                     <address class="main-footer__data">                      
-                      <ul class="main-footer__list">                      
+                      <ul class="main-footer__list main-footer__col1">                      
                         <li class="main-footer__item">IE San Francisco de Assis</li>
                         <li class="main-footer__item">Cordoba - Colombia</li>
                         <li class="main-footer__item">San Bernardo del Viento</li>
                       </ul>
                     </address>
+                    <div class="sociales sociales-footer">
+                      <a href="" class="icon-footer icon-youtube"></a>
+                      <a href="" class="icon-footer icon-facebook"></a>
+                      <a href="" class="icon-footer icon-twitter"></a>
+                      <a href="" class="icon-footer icon-instagram"></a>
+                    </div>
                 </div>
               <div class="col main-footer__container">
                   <h2 class="main-footer__title">Contactanos</h2>                  
                   <div class="main-footer__data">
-                    <ul class="main-footer__list">                      
+                    <ul class="main-footer__list main-footer__col2">                      
                       <li class="main-footer__item">Luis Miguel Camaño Bruno</li>
-                      <li class="main-footer__item">Celular: 12334566</li>
-                      <li class="main-footer__item">Email: correo@dominio.com</li>
+                      <li class="main-footer__item">Celular: 3234911726</li>
+                      <li class="main-footer__item">Email: escuelaenti@gmail.com</li>
                     </ul>                  
                   </div>
               </div>
               <div class="col main-footer__container">
                   <h2 class="main-footer__title">Contactanos</h2>                  
                   <div class="main-footer__data">
-                    <ul class="main-footer__list">                      
+                    <ul class="main-footer__list main-footer__col3">                      
                       <li class="main-footer__item">Luis Miguel Camaño Bruno</li>
                       <li class="main-footer__item">Celular: 12334566</li>
                       <li class="main-footer__item">Email: correo@dominio.com</li>
