--- a/css/icons-reference.html
+++ b/css/icons-reference.html
@@ -51,6 +51,10 @@
           <div class="icon icon-globe"></div>
           <input type="text" readonly="readonly" value="globe">
         </li>
+        <li>
+          <div class="icon icon-play-circle"></div>
+          <input type="text" readonly="readonly" value="play-circle">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -89,6 +93,10 @@
         <li>
           <div data-icon="c" class="icon"></div>
           <input type="text" readonly="readonly" value="c">
+        </li>
+        <li>
+          <div data-icon="j" class="icon"></div>
+          <input type="text" readonly="readonly" value="j">
         </li>
       </ul>
     </div>
