--- a/encuesta.html
+++ b/encuesta.html
@@ -43,7 +43,7 @@
 
                 <div class="row main-menu__nav">
                       <div class="accordion col-sm-6 col-md-12" id="accordionExample">
-                  <a class="btn main-menu__button main-menu__link" href="#">Inicio</a>
+                  <a class="btn main-menu__button main-menu__link" href="index.html">Inicio</a>
                   <a class="btn main-menu__button main-menu__link" href="#">Proyecto</a>
                   <a class="btn main-menu__button main-menu__link" href="encuesta.html">Encuesta</a>
                   <a class="btn main-menu__button main-menu__link" href="#">Objetivos</a>
@@ -124,69 +124,10 @@
                     </nav>
                     <!-- main -->
                     <main class=" main-main col-lg-9 col-md-9">
-                        <article id="carouselIndicators" class=" main-main__article carousel slide" data-ride="carousel">
-                          <ol class="carousel-indicators">
-                            <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselIndicators" data-slide-to="2"></li>
-                          </ol>
-                          <div class="carousel-inner">
-                            <div class="carousel-item active">
-                              <img class="d-block w-100" src="img/slide-01.JPG" alt="First slide">
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>Estudiantes</h5>
-                                <p>En la escuela, participando de actividades religiosas</p>
-                              </div>
-                            </div>
-                            <div class="carousel-item">
-                              <img class="d-block w-100" src="img/slide-02.JPG" alt="Second slide">
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>Estudiantes Grupo 5</h5>
-                                <p>Participando en las actividades escolares, de esparcimiento</p>
-                              </div>
-                            </div>
-                            <div class="carousel-item">
-                              <img class="d-block w-100" src="img/slide-03.JPG" alt="Third slide">
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>Estudiantes en Clase</h5>
-                                <p>Estudiantes en el aula de clase participando activamente</p>
-                              </div>
-                            </div>
-                          </div>
-                          <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                          </a>
-                          <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                          </a>
-                        </article>
-                        <article class="main-main__article">
-                          <h2 class="main-main__title">Noticia 1</h2>
-                          <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                          <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                          <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                        </article>                        
-                        <article class="main-main__article">
-                            <h2 class="main-main__title">Noticia 1</h2>
-                            <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                            <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                            <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                          </article>                        
-                          <article class="main-main__article">
-                              <h2 class="main-main__title">Noticia 1</h2>
-                              <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                              <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                              <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                            </article>                        
-                            <article class="main-main__article">
-                                <h2 class="main-main__title">Noticia 1</h2>
-                                <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                                <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                                <p class="main-main__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est excepturi maiores obcaecati beatae eius commodi non quis quasi ducimus suscipit ipsam dignissimos, facilis cumque ullam qui reiciendis. Minus, vero!</p>
-                              </article>                        
-                      </main>
+                      <article class="main-main__article">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScVAkQxpxpWhpDz_yBtSIxJaJFOJa8xdwgxMZnmIJSLldhmPg/viewform?embedded=true" width="700" height="2000" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>    
+                      </article>  
+                    </main>
                 </div>
 
         <!-- presentacion -->
